@@ -10,7 +10,8 @@ systemd System and Service Manager
     - don't output sysctl keys to terminal at startup;
  * busctl:
     - remove pager;
-    - remove machine argument option
+    - remove machine argument option;
+    - remove show-machine argument option;
  * bugfix:
     - fix open syslog stdout socket on execute;
  * remove bootctl program;
